--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@playwright/test": "^1.28.1",
     "@sveltejs/adapter-node": "^1.1.0",
     "@sveltejs/kit": "^1.0.0",
+    "@types/uuid": "^9.0.0",
     "@typescript-eslint/eslint-plugin": "^5.45.0",
     "@typescript-eslint/parser": "^5.45.0",
     "autoprefixer": "^10.4.7",
@@ -43,6 +44,7 @@
   "type": "module",
   "dependencies": {
     "mysql2": "^3.0.1",
+    "uuid": "^9.0.0",
     "zod": "^3.20.2"
   }
 }
