--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   },
   "type": "module",
   "dependencies": {
+    "argon2": "^0.30.3",
     "mysql2": "^3.0.1",
     "uuid": "^9.0.0",
     "zod": "^3.20.2"
