--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "postcss-load-config": "^4.0.1",
     "prettier": "^2.8.0",
     "prettier-plugin-svelte": "^2.8.1",
+    "prisma": "^4.9.0",
     "svelte": "^3.54.0",
     "svelte-check": "^2.9.2",
     "svelte-fa": "^3.0.3",
