--- a/package.json
+++ b/package.json
@@ -44,8 +44,8 @@
   },
   "type": "module",
   "dependencies": {
+    "@prisma/client": "^4.9.0",
     "argon2": "^0.30.3",
-    "mysql2": "^3.0.1",
     "uuid": "^9.0.0",
     "zod": "^3.20.2"
   }
