--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@playwright/test": "^1.28.1",
     "@sveltejs/adapter-node": "^1.1.0",
     "@sveltejs/kit": "^1.0.0",
+    "@types/nodemailer": "^6.4.7",
     "@types/uuid": "^9.0.0",
     "@typescript-eslint/eslint-plugin": "^5.45.0",
     "@typescript-eslint/parser": "^5.45.0",
@@ -46,6 +47,7 @@
   "dependencies": {
     "@prisma/client": "^4.9.0",
     "argon2": "^0.30.3",
+    "nodemailer": "^6.9.0",
     "uuid": "^9.0.0",
     "zod": "^3.20.2"
   }
