--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@prisma/client": "^4.9.0",
     "argon2": "^0.30.3",
     "nodemailer": "^6.9.0",
+    "winston": "^3.8.2",
     "zod": "^3.20.2"
   }
 }
