[POLY-479] Create FlowPropertiesSelector from old SK
* completely rewrote the old FlowPropertiesSelector from old version of SK
* each of the 3 components has its own set of tests to ensure correct functionality
* also setup Vitest, which will be our component testing solution for now
  (also experimented with playwright component testing, but doesn't have enough
  component testing functionality eg function mocking to be good for our use case as of now)
* redid the styles of the selector as well

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
     "test:unit": "vitest",
+    "test:unit:coverage": "vitest run --coverage",
     "lint": "prettier --plugin-search-dir . --check . && eslint .",
     "format": "prettier --plugin-search-dir . --write ."
   },
@@ -18,11 +19,17 @@
     "@playwright/test": "^1.28.1",
     "@sveltejs/adapter-node": "^1.1.0",
     "@sveltejs/kit": "^1.0.0",
+    "@testing-library/dom": "^9.0.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/svelte": "^3.2.2",
+    "@testing-library/user-event": "^14.4.3",
     "@types/jsdom": "^21.1.0",
     "@types/nodemailer": "^6.4.7",
+    "@types/testing-library__jest-dom": "^5.14.5",
     "@types/uuid": "^9.0.0",
     "@typescript-eslint/eslint-plugin": "^5.45.0",
     "@typescript-eslint/parser": "^5.45.0",
+    "@vitest/coverage-c8": "^0.28.5",
     "autoprefixer": "^10.4.7",
     "csv-parse": "^5.3.5",
     "daisyui": "^2.46.1",
