--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@testing-library/user-event": "^14.4.3",
     "@types/jsdom": "^21.1.0",
     "@types/nodemailer": "^6.4.7",
+    "@types/object-hash": "^3.0.2",
     "@types/testing-library__jest-dom": "^5.14.5",
     "@types/uuid": "^9.0.0",
     "@typescript-eslint/eslint-plugin": "^5.45.0",
@@ -55,9 +56,10 @@
   },
   "type": "module",
   "dependencies": {
-    "@prisma/client": "^4.9.0",
+    "@prisma/client": "^4.10.1",
     "argon2": "^0.30.3",
     "nodemailer": "^6.9.0",
+    "object-hash": "^3.0.0",
     "uuid": "^9.0.0",
     "winston": "^3.8.2",
     "zod": "^3.20.2"
