[POLY-504] Switch from $env to dotenv for environment variables
doing this for 2 reasons:
1. env variables not loaded by default in prod, need to do 'node -r dotenv/config build'
2. when running api TS files and Playwright TS files, bundlers/tsc error when trying
   to determine origin of '$env' module - so change it to reduce code duplication

--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
   "dependencies": {
     "@prisma/client": "^4.10.1",
     "argon2": "^0.30.3",
+    "dotenv": "^16.0.3",
     "nodemailer": "^6.9.0",
     "object-hash": "^3.0.0",
     "uuid": "^9.0.0",
