[POLY-470] Add migration script to dump user data from existing pfb db
* batches request per 10 users
* run with 'npx tsx dump-user-data.ts' (make sure you're cd'd into src dir)

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-svelte3": "^4.0.0",
     "jsdom": "^21.1.0",
+    "mysql2": "^3.2.0",
     "postcss": "^8.4.14",
     "postcss-load-config": "^4.0.1",
     "prettier": "^2.8.0",
