--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "dotenv": "^16.0.3",
     "nodemailer": "^6.9.0",
     "object-hash": "^3.0.0",
+    "tippy.js": "^6.3.7",
     "uuid": "^9.0.0",
     "winston": "^3.8.2",
     "zod": "^3.20.2"
