--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "prisma": "^4.9.0",
     "svelte": "^3.54.0",
     "svelte-check": "^3.0.0",
+    "svelte-dnd-action": "^0.9.22",
     "svelte-fa": "^3.0.3",
     "svelte-preprocess": "^5.0.0",
     "tailwindcss": "^3.1.5",
