--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "tippy.js": "^6.3.7",
     "uuid": "^9.0.0",
     "winston": "^3.8.2",
+    "winston-daily-rotate-file": "^4.7.1",
     "zod": "^3.20.2"
   }
 }
