[POLY-566] Add color selector into flow actions dropdown
* add new dep Pickr for the color picker
* can now go into the actions menu to pick a color to use
* currently selected color is located in a store for consumption by other components/processes
* tests to come later

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@playwright/test": "^1.28.1",
+    "@simonwep/pickr": "^1.8.2",
     "@sveltejs/adapter-node": "^1.1.0",
     "@sveltejs/kit": "^1.0.0",
     "@testing-library/dom": "^9.0.0",
