[POLY-576] Implement /api/data/generatePDF backend API route for generating PDFs on backend
* endpoint takes flowchartId from user which will be used to generate a PDF
* moved some client utilities to the common space since PDF generation uses them
* tests to come later

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/svelte": "^3.2.2",
     "@testing-library/user-event": "^14.4.3",
+    "@types/ejs": "^3.1.2",
     "@types/jsdom": "^21.1.0",
     "@types/nodemailer": "^6.4.7",
     "@types/object-hash": "^3.0.2",
@@ -62,9 +63,11 @@
     "@prisma/client": "^4.10.1",
     "argon2": "^0.30.3",
     "dotenv": "^16.0.3",
+    "ejs": "^3.1.9",
     "fuse.js": "^6.6.2",
     "nodemailer": "^6.9.0",
     "object-hash": "^3.0.0",
+    "puppeteer": "^20.5.0",
     "tippy.js": "^6.3.7",
     "uuid": "^9.0.0",
     "winston": "^3.8.2",
