--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "@types/uuid": "^9.0.0",
     "@typescript-eslint/eslint-plugin": "^5.45.0",
     "@typescript-eslint/parser": "^5.45.0",
-    "@vitest/coverage-c8": "^0.31.0",
+    "@vitest/coverage-v8": "^0.32.0",
     "autoprefixer": "^10.4.7",
     "csv-parse": "^5.3.5",
     "daisyui": "^2.46.1",
@@ -56,7 +56,7 @@
     "tw-elements": "^1.0.0-alpha13",
     "typescript": "^5.0.0",
     "vite": "^4.0.0",
-    "vitest": "^0.31.0"
+    "vitest": "^0.32.0"
   },
   "type": "module",
   "dependencies": {
