[POLY-578] Update to Svelte 4

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@sveltejs/kit": "^1.0.0",
     "@testing-library/dom": "^9.0.0",
     "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/svelte": "^3.2.2",
+    "@testing-library/svelte": "^4.0.1",
     "@testing-library/user-event": "^14.4.3",
     "@types/ejs": "^3.1.2",
     "@types/jsdom": "^21.1.0",
@@ -38,7 +38,7 @@
     "daisyui": "^2.46.1",
     "eslint": "^8.28.0",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-svelte3": "^4.0.0",
+    "eslint-plugin-svelte": "^2.31.1",
     "jsdom": "^22.0.0",
     "mysql2": "^3.2.0",
     "postcss": "^8.4.14",
@@ -46,7 +46,7 @@
     "prettier": "^2.8.0",
     "prettier-plugin-svelte": "^2.8.1",
     "prisma": "^4.9.0",
-    "svelte": "^3.54.0",
+    "svelte": "^4.0.0",
     "svelte-check": "^3.0.0",
     "svelte-dnd-action": "^0.9.22",
     "svelte-fa": "^3.0.3",
