--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "svelte-preprocess": "^5.0.0",
     "tailwindcss": "^3.1.5",
     "tslib": "^2.4.1",
-    "tw-elements": "^1.0.0-alpha13",
+    "tw-elements": "^1.0.0-beta2",
     "typescript": "^5.0.0",
     "vite": "^4.0.0",
     "vitest": "^0.33.0"
