--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "test:unit": "vitest",
     "test:unit:coverage": "vitest run --coverage",
     "lint": "prettier --check . && eslint .",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "prepare": "husky install"
   },
   "devDependencies": {
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
@@ -56,7 +57,8 @@
     "tw-elements": "^1.0.0-beta2",
     "typescript": "^5.0.0",
     "vite": "^4.0.0",
-    "vitest": "^0.33.0"
+    "vitest": "^0.33.0",
+    "husky": "^8.0.0"
   },
   "type": "module",
   "dependencies": {
