--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "playwright test",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-    "test:unit": "vitest",
+    "test:unit": "vitest run",
     "test:unit:coverage": "vitest run --coverage",
     "lint": "prettier --check . && eslint .",
     "format": "prettier --write .",
