add script to run all tests

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "test:firefox": "playwright test --project=firefox",
     "test:webkit": "playwright test --project=webkit",
     "test:fast": "npm run test:chromium",
-    "test:full": "npm run test:chromium && npm run test:chrome && npm run test:edge && npm run test:firefox && npm run test:webkit",
+    "test:full": "playwright test",
+    "test:full:seq": "npm run test:chromium && npm run test:chrome && npm run test:edge && npm run test:firefox && npm run test:webkit",
     "test:unit": "vitest run",
     "test:unit:coverage": "vitest run --coverage",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
