Update testing suite to include all major browsers (#62)

--- a/package.json
+++ b/package.json
@@ -6,11 +6,18 @@
     "dev": "vite dev",
     "build": "vite build",
     "preview": "vite preview",
-    "test": "playwright test",
-    "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+    "test:chromium": "playwright test --project=chromium",
+    "test:chrome": "playwright test --project=chrome",
+    "test:edge": "playwright test --project=edge",
+    "test:firefox": "playwright test --project=firefox",
+    "test:webkit": "playwright test --project=webkit",
+    "test:fast": "npm run test:chromium",
+    "test:full": "playwright test",
+    "test:full:seq": "npm run test:chromium && npm run test:chrome && npm run test:edge && npm run test:firefox && npm run test:webkit",
     "test:unit": "vitest run",
     "test:unit:coverage": "vitest run --coverage",
+    "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
     "lint": "prettier --check . && eslint .",
     "format": "prettier --write .",
     "prepare": "husky install"
