--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
     "lint": "prettier --check . && eslint .",
-    "format": "prettier --write .",
-    "prepare": "husky install"
+    "format": "prettier --write ."
   },
   "devDependencies": {
     "@fortawesome/free-brands-svg-icons": "^6.4.2",
@@ -46,7 +45,6 @@
     "eslint": "^8.28.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-svelte": "^2.31.1",
-    "husky": "^8.0.0",
     "jsdom": "^22.0.0",
     "mysql2": "^3.2.0",
     "postcss": "^8.4.14",
