--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -20,5 +20,6 @@ jobs:
         env:
           DEFAULT_BRANCH: main
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          JAVASCRIPT_ES_CONFIG_FILE: .eslintrc.cjs
+          LINTER_RULES_PATH: /
+          JAVASCRIPT_ES_CONFIG_FILE: /home/runner/work/.eslintrc.cjs
           JAVASCRIPT_DEFAULT_STYLE: prettier
