--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -20,6 +20,9 @@ jobs:
         env:
           DEFAULT_BRANCH: main
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          LINTER_RULES_PATH: /
-          JAVASCRIPT_ES_CONFIG_FILE: /home/runner/work/.eslintrc.cjs
+          IGNORE_GITIGNORED_FILES: true
+          LINTER_RULES_PATH: .
+          VALIDATE_JAVASCRIPT_ES: true
+          JAVASCRIPT_ES_CONFIG_FILE: .eslintrc.cjs
           JAVASCRIPT_DEFAULT_STYLE: prettier
+          TYPESCRIPT_DEFAULT_STYLE: prettier
