--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -7,7 +7,7 @@ on:
     branches: [main]
 
 jobs:
-  build:
+  lint:
     name: lint
     runs-on: ubuntu-latest
 
@@ -15,14 +15,25 @@ jobs:
       - name: checkout
         uses: actions/checkout@v4
 
+      - name: setup-node
+        uses: actions/setup-node@v3
+        with:
+          node-version: 20
+
+      - name: install deps
+        run: npm ci
+
       - name: lint
-        uses: github/super-linter@v5
-        env:
-          DEFAULT_BRANCH: main
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          IGNORE_GITIGNORED_FILES: true
-          LINTER_RULES_PATH: /
-          VALIDATE_JAVASCRIPT_ES: true
-          JAVASCRIPT_ES_CONFIG_FILE: .eslintrc.cjs
-          JAVASCRIPT_DEFAULT_STYLE: prettier
-          TYPESCRIPT_DEFAULT_STYLE: prettier
+        run: npm run lint
+
+      # - name: lint
+      #   uses: github/super-linter@v5
+      #   env:
+      #     DEFAULT_BRANCH: main
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      #     IGNORE_GITIGNORED_FILES: true
+      #     LINTER_RULES_PATH: /
+      #     VALIDATE_JAVASCRIPT_ES: true
+      #     JAVASCRIPT_ES_CONFIG_FILE: .eslintrc.cjs
+      #     JAVASCRIPT_DEFAULT_STYLE: prettier
+      #     TYPESCRIPT_DEFAULT_STYLE: prettier
