--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
     "preview": "vite preview",
     "test:chromium": "playwright test --project=chromium",
     "test:chrome": "playwright test --project=chrome",
-    "test:edge": "playwright test --project=edge",
+    "test:msedge": "playwright test --project=msedge",
     "test:firefox": "playwright test --project=firefox",
     "test:webkit": "playwright test --project=webkit",
     "test:fast": "npm run test:chromium",
     "test:full": "playwright test",
-    "test:full:seq": "npm run test:chromium && npm run test:chrome && npm run test:edge && npm run test:firefox && npm run test:webkit",
+    "test:full:seq": "npm run test:chromium && npm run test:chrome && npm run test:msedge && npm run test:firefox && npm run test:webkit",
     "test:unit": "vitest run",
     "test:unit:coverage": "vitest run --coverage",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
