--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -73,6 +73,7 @@ jobs:
       - run: cd api/src/dev && npx tsx api-data-sync && cd ../../..
       - run: npm run test:${{ matrix.project }}
       - uses: actions/upload-artifact@v3
+        if: always()
         with:
           name: playwright-report
           path: playwright-report/
