--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -64,7 +64,13 @@ jobs:
       EMAIL_SENDER_NAME: ${{ secrets.EMAIL_SENDER_NAME }}
 
     steps:
+      # setup mysql on different platforms
       - run: sudo systemctl start mysql.service
+        if: ${{ matrix.os == "ubuntu-latest" }}
+
+      - run: sudo brew install mysql
+        if: ${{ matrix.os == "macOS-latest" }}
+
       - run: |
           mysql -e 'CREATE DATABASE main;' --user=root --password=root
       - uses: actions/checkout@v4
