--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -68,7 +68,7 @@ jobs:
       - run: sudo systemctl start mysql.service
         if: ${{ matrix.os == 'ubuntu-latest' }}
 
-      - run: sudo brew install mysql
+      - run: brew install mysql
         if: ${{ matrix.os == 'macOS-latest' }}
 
       - run: |
