--- a/package.json
+++ b/package.json
@@ -8,19 +8,18 @@
     "preview": "vite preview",
     "test:chromium": "playwright test --project=chromium",
     "test:chrome": "playwright test --project=chrome",
-    "test:edge": "playwright test --project=edge",
+    "test:msedge": "playwright test --project=msedge",
     "test:firefox": "playwright test --project=firefox",
     "test:webkit": "playwright test --project=webkit",
     "test:fast": "npm run test:chromium",
     "test:full": "playwright test",
-    "test:full:seq": "npm run test:chromium && npm run test:chrome && npm run test:edge && npm run test:firefox && npm run test:webkit",
+    "test:full:seq": "npm run test:chromium && npm run test:chrome && npm run test:msedge && npm run test:firefox && npm run test:webkit",
     "test:unit": "vitest run",
     "test:unit:coverage": "vitest run --coverage",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
     "lint": "prettier --check . && eslint .",
-    "format": "prettier --write .",
-    "prepare": "husky install"
+    "format": "prettier --write ."
   },
   "devDependencies": {
     "@fortawesome/free-brands-svg-icons": "^6.4.2",
@@ -46,7 +45,6 @@
     "eslint": "^8.28.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-svelte": "^2.31.1",
-    "husky": "^8.0.0",
     "jsdom": "^22.0.0",
     "mysql2": "^3.2.0",
     "postcss": "^8.4.14",
