add check script to Lint task of gha

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,6 +21,7 @@ jobs:
           cache: 'npm'
       - run: npm ci
       - run: npm run lint
+      - run: npm run check
 
   # TODO: unit tests should not need a database!
   UnitTest:
