add env vars required for check in lint step for gha

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,6 +13,10 @@ concurrency:
 jobs:
   Lint:
     runs-on: ubuntu-latest
+    env:
+      PUBLIC_PFB_DISCORD_LINK: https://discord.gg/xCadnCRC9f
+      PUBLIC_PFB_GITHUB_LINK: https://github.com/polyflowbuilder/polyflowbuilder
+      PUBLIC_PFB_ANALYTICS_ID:
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v3
