--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@playwright/test": "^1.28.1",
     "@simonwep/pickr": "^1.8.2",
-    "@sveltejs/adapter-node": "^1.1.0",
-    "@sveltejs/kit": "^1.0.0",
+    "@sveltejs/adapter-node": "^2.0.0",
+    "@sveltejs/kit": "^2.0.0",
     "@testing-library/dom": "^9.0.0",
     "@testing-library/jest-dom": "^6.0.0",
     "@testing-library/svelte": "^4.0.1",
@@ -39,17 +39,17 @@
     "@types/uuid": "^9.0.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
-    "@vitest/coverage-v8": "^0.34.1",
+    "@vitest/coverage-v8": "^1.0.4",
     "autoprefixer": "^10.4.7",
     "csv-parse": "^5.3.5",
     "daisyui": "^4.4.17",
     "eslint": "^8.28.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-svelte": "^2.31.1",
-    "jsdom": "^22.0.0",
+    "jsdom": "^23.0.1",
     "mysql2": "^3.2.0",
     "postcss": "^8.4.14",
-    "postcss-load-config": "^4.0.1",
+    "postcss-load-config": "^5.0.2",
     "prettier": "^3.0.0",
     "prettier-plugin-svelte": "^3.0.0",
     "prisma": "^5.0.0",
@@ -62,8 +62,11 @@
     "tslib": "^2.4.1",
     "tw-elements": "^1.0.0-beta2",
     "typescript": "^5.0.0",
-    "vite": "^4.0.0",
-    "vitest": "^0.34.1"
+    "vite": "^5.0.0",
+    "vitest": "^1.0.0"
+  },
+  "peerDependencies": {
+    "@sveltejs/vite-plugin-svelte": "^3.0.0"
   },
   "type": "module",
   "dependencies": {
