--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "svelte-preprocess": "^5.0.0",
     "tailwindcss": "^3.1.5",
     "tslib": "^2.4.1",
-    "tw-elements": "^1.0.0-beta2",
+    "tw-elements": "^2.0.0",
     "typescript": "^5.0.0",
     "vite": "^5.0.0",
     "vitest": "^1.0.0"
