Set dev containers to run on host network
Browser would hang while connecting to localhost:5173 (even though prisma studio works fine). Seems to be a devcontainer thing, since other sveltekit projects would also hang, maybe not all vite ports are being auto forwarded?

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -8,7 +8,7 @@
 	// Features to add to the dev container. More info: https://containers.dev/features.
 	// "features": {},
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
-	// "forwardPorts": [],
+	// "forwardPorts": [5173],
 	// Use 'postCreateCommand' to run commands after the container is created.
 	// TODO: Add local database setup here (for now, just run npx prisma db push)
 	"postCreateCommand": "npm install",
@@ -24,7 +24,7 @@
 				"svelte.enable-ts-plugin": true
 			}
 		}
-	}
+	},
 	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
 	// "remoteUser": "root"
 }
