--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -9,9 +9,12 @@
 	// "features": {},
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
 	// "forwardPorts": [5173],
+	
 	// Use 'postCreateCommand' to run commands after the container is created.
-	// TODO: Add local database setup here (for now, just run npx prisma db push)
-	"postCreateCommand": "npm install && cp -nv ./.devcontainer/dev.env .env",
+	// TODO: Add local database setup here
+	// (for now, just run npx prisma db push manually)
+	"postCreateCommand": "npm ci && npm i -g tsx && cp -nv ./.devcontainer/dev.env .env",
+	
 	// Configure tool-specific properties.
 	"customizations": {
 		"vscode": {
