upgrade eslint to v9 and typescript-eslint to v8

--- a/package.json
+++ b/package.json
@@ -37,13 +37,11 @@
     "@types/jsdom": "^21.1.0",
     "@types/object-hash": "^3.0.2",
     "@types/uuid": "^10.0.0",
-    "@typescript-eslint/eslint-plugin": "^7.0.1",
-    "@typescript-eslint/parser": "^7.0.1",
     "@vitest/coverage-v8": "^2.0.5",
     "autoprefixer": "^10.4.7",
     "csv-parse": "^5.3.5",
     "daisyui": "^4.4.17",
-    "eslint": "^8.28.0",
+    "eslint": "^9.9.1",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-svelte": "^2.31.1",
     "jsdom": "^25.0.0",
@@ -62,6 +60,7 @@
     "tslib": "^2.4.1",
     "tw-elements": "^2.0.0",
     "typescript": "^5.0.0",
+    "typescript-eslint": "^8.4.0",
     "vite": "^5.0.0",
     "vitest": "^2.0.5"
   },
